--- a/content/blog/en/2023-03-29--por-que-você-deve-contribuir-em-projetos-open-source.mdx
+++ b/content/blog/en/2023-03-29--por-que-você-deve-contribuir-em-projetos-open-source.mdx
@@ -1,6 +1,10 @@
 ---
+slug: por-que-contribuir-em-projetos-open-source
 title: Por que você deve contribuir em projetos open source?
 date: 2023-03-29T19:53:53.779Z
+author: celoreis
+tags:
+  - open-source
 thumbnail: /images/uploads/qrcode_53364112_d827a1bf6619c7ca15b04c857177a457.png
 ---
 # Introduction
