feat: basic blog configuration

--- a/content/blog/en/2023-03-29-why-contribute-to-open-source-projects.mdx
+++ b/content/blog/en/2023-03-29-why-contribute-to-open-source-projects.mdx
@@ -1,68 +1,70 @@
 ---
-slug: por-que-contribuir-em-projetos-open-source
-title: Por que você deve contribuir em projetos open source?
+slug: why-contribute-to-open-source-projects
+title: Why contribute to open source projects?
+description: Have you heard about open source projects, but do you know why it's important to contribute to them? In this article, we will discuss the benefits of contributing to open source projects and how you can get started in this amazing community.
 date: 2023-03-29T19:53:53.779Z
 author: celoreis
 tags:
   - open-source
-thumbnail: /images/uploads/qrcode_53364112_d827a1bf6619c7ca15b04c857177a457.png
+thumbnail: /images/uploads/celo-reis.jpg
 ---
-# Introduction
+
+## Introduction
 
 Have you heard about open source projects, but do you know why it's important to contribute to them? In this article, we will discuss the benefits of contributing to open source projects and how you can get started in this amazing community.
 
-## What is open source?
+### What is open source?
 
 The term "open source" refers to a type of software whose source code is publicly available for anyone to view, modify, and distribute. This approach allows the global community of developers to collaborate on projects, bringing constant improvements and innovations.
 
-## Benefits
+### Benefits
 
-### Improving technical skills
+#### Improving technical skills
 
 Contributing to open source projects is an excellent way to improve your technical skills. You will have the opportunity to work with various technologies, face real challenges, and learn from other experienced developers.
 
-### Increasing professional visibility
+#### Increasing professional visibility
 
 By collaborating on open source projects, you will be exposing your work to a global audience. This can increase your professional visibility and even attract the attention of potential employers.
 
-### Networking
+#### Networking
 
 Participating in open source projects allows you to build a network of contacts with professionals from different areas and levels of experience. These connections can be valuable for future collaborations, job opportunities, and personal growth.
 
-### Contributing to the community
+#### Contributing to the community
 
 By dedicating your time and skills to open source projects, you will be helping the global community of developers to create and maintain better and more innovative software. This can be extremely rewarding and provide a sense of accomplishment.
 
-### Having an online portfolio
+#### Having an online portfolio
 
 Contributing to open source projects allows you to create a solid online portfolio that demonstrates your skills and technical knowledge. This portfolio can be an advantage when you are looking for a job or seeking to advance in your career.
 
-## How to get started
+### How to get started
 
-### Finding projects
+#### Finding projects
 
 There are many open source projects available for contribution. Some platforms, such as GitHub and GitLab, make it easy to search for projects based on your interests and skills.
 
-### Choosing your area of contribution
+#### Choosing your area of contribution
 
 There are several ways to contribute to open source projects:
 
-* Development: You can help write, review, or fix code.
-* Documentation: Creating and maintaining documentation is essential for the success of a project.
-* Translation: If you speak more than one language, you can help translate the documentation or the software itself.
-* Testing and QA: Testing the software and identifying issues is an important part of the development process.
+- Development: You can help write, review, or fix code.
+- Documentation: Creating and maintaining documentation is essential for the success of a project.
+- Translation: If you speak more than one language, you can help translate the documentation or the software itself.
+- Testing and QA: Testing the software and identifying issues is an important part of the development process.
 
-### How to contribute
+#### How to contribute
 
-* Fork and clone repository: First, fork the project's repository to your personal account and clone it locally to start working.
-* Open issues and send pull requests: Identify existing issues or areas that need improvement and open an issue on the project's repository. After making the necessary changes, send a pull request for your contributions to be reviewed and possibly incorporated into the project.
-* Participate in discussions and communication: Communicate with other contributors and stay up to date on the latest news and updates from the project. This includes participating in forums, mailing lists, and chats.
+- Fork and clone repository: First, fork the project's repository to your personal account and clone it locally to start working.
+- Open issues and send pull requests: Identify existing issues or areas that need improvement and open an issue on the project's repository. After making the necessary changes, send a pull request for your contributions to be reviewed and possibly incorporated into the project.
+- Participate in discussions and communication: Communicate with other contributors and stay up to date on the latest news and updates from the project. This includes participating in forums, mailing lists, and chats.
 
-## Conclusion
+### Conclusion
 
 Contributing to open source projects offers a range of benefits, from improving technical skills to building a network of professional contacts. Additionally, it's an excellent way to make a positive impact on the global community of developers. There's no better time to start contributing to open source projects than now.
 
-## FAQs
+### FAQs
 
 1. **Do I need to be an experienced developer to contribute to open source projects?** No, people with different levels of experience can contribute to open source projects. Additionally, there are several areas of contribution, such as documentation and translation, that do not require advanced programming skills.
 2. **How can I find open source projects that align with my interests and skills?** You can use platforms like GitHub and GitLab to search for projects based on specific technologies, programming languages, and areas of interest.
