--- a/content/blog/pt/2023-03-29-why-contribute-to-open-source-projects.mdx
+++ b/content/blog/pt/2023-03-29-why-contribute-to-open-source-projects.mdx
@@ -1,7 +1,9 @@
 ---
 title: Por que você deve contribuir em projetos open source?
+description: Contribuir para projetos open source pode trazer uma série de benefícios, desde melhorar suas habilidades técnicas até construir uma rede de contatos profissionais. Além disso, é uma excelente maneira de fazer uma diferença positiva na comunidade global de desenvolvedores. Não há melhor momento para começar a contribuir para projetos open source do que agora.
 date: 2023-03-29T19:53:53.816Z
 ---
+
 **Introdução**
 
 Você já ouviu falar sobre projetos open source, mas sabe por que é importante contribuir para eles? Neste artigo, discutiremos os benefícios de contribuir para projetos de código aberto e como você pode começar a fazer parte dessa comunidade incrível.
@@ -42,15 +44,16 @@ Há muitos projetos open source disponíveis para contribuição. Algumas plataf
 
 Existem várias formas de contribuir para projetos open source:
 
-* **Desenvolvimento**: Você pode ajudar a escrever, revisar ou corrigir código.
-* **Documentação**: Criar e manter documentação é essencial para o sucesso de um projeto.
-* **Tradução**: Se você fala mais de um idioma, pode ajudar a traduzir a documentação ou o software em si.
-* **Testes e QA**: Testar o software e identificar problemas é uma parte importante do processo de desenvolvimento.
+- **Desenvolvimento**: Você pode ajudar a escrever, revisar ou corrigir código.
+- **Documentação**: Criar e manter documentação é essencial para o sucesso de um projeto.
+- **Tradução**: Se você fala mais de um idioma, pode ajudar a traduzir a documentação ou o software em si.
+- **Testes e QA**: Testar o software e identificar problemas é uma parte importante do processo de desenvolvimento.
 
   **Como contribuir**
-* **Fazer fork e clonar repositório**: Primeiro, faça um "fork" do repositório do projeto para a sua conta e clone-o localmente para começar a trabalhar.
-* **Abrir issues e enviar pull requests**: Identifique problemas existentes ou áreas que precisam de melhorias e abra uma "issue" no repositório do projeto. Após fazer as alterações necessárias, envie um "pull request" para que suas contribuições sejam analisadas e possivelmente incorporadas ao projeto.
-* **Participar de discussões e comunicação**: Comunique-se com outros colaboradores e mantenha-se atualizado sobre as últimas notícias e atualizações do projeto. Isso inclui participar de fóruns, listas de discussão e chats.
+
+- **Fazer fork e clonar repositório**: Primeiro, faça um "fork" do repositório do projeto para a sua conta e clone-o localmente para começar a trabalhar.
+- **Abrir issues e enviar pull requests**: Identifique problemas existentes ou áreas que precisam de melhorias e abra uma "issue" no repositório do projeto. Após fazer as alterações necessárias, envie um "pull request" para que suas contribuições sejam analisadas e possivelmente incorporadas ao projeto.
+- **Participar de discussões e comunicação**: Comunique-se com outros colaboradores e mantenha-se atualizado sobre as últimas notícias e atualizações do projeto. Isso inclui participar de fóruns, listas de discussão e chats.
 
   **Conclusão**
 
