Update Blog “2023-03-29-why-contribute-to-open-source-projects”

--- a/content/blog/en/2023-03-29-why-contribute-to-open-source-projects.mdx
+++ b/content/blog/en/2023-03-29-why-contribute-to-open-source-projects.mdx
@@ -1,14 +1,16 @@
 ---
 slug: why-contribute-to-open-source-projects
 title: Why contribute to open source projects?
-description: Have you heard about open source projects, but do you know why it's important to contribute to them? In this article, we will discuss the benefits of contributing to open source projects and how you can get started in this amazing community.
+description: Have you heard about open source projects, but do you know why it's
+  important to contribute to them? In this article, we will discuss the benefits
+  of contributing to open source projects and how you can get started in this
+  amazing community.
+thumbnail: /images/uploads/f-open-source-1.jpg
 date: 2023-03-29T19:53:53.779Z
 author: celoreis
 tags:
   - open-source
-thumbnail: /images/uploads/celo-reis.jpg
 ---
-
 ## Introduction
 
 Have you heard about open source projects, but do you know why it's important to contribute to them? In this article, we will discuss the benefits of contributing to open source projects and how you can get started in this amazing community.
