--- a/content/blog/pt/2023-03-29-why-contribute-to-open-source-projects.mdx
+++ b/content/blog/pt/2023-03-29-why-contribute-to-open-source-projects.mdx
@@ -1,65 +1,73 @@
 ---
 title: Por que você deve contribuir em projetos open source?
-description: Contribuir para projetos open source pode trazer uma série de benefícios, desde melhorar suas habilidades técnicas até construir uma rede de contatos profissionais. Além disso, é uma excelente maneira de fazer uma diferença positiva na comunidade global de desenvolvedores. Não há melhor momento para começar a contribuir para projetos open source do que agora.
+description: Você já ouviu falar sobre projetos de código aberto, mas sabe por
+  que é importante contribuir para eles? Neste artigo, discutiremos os
+  benefícios de contribuir para projetos de código aberto e como você pode
+  começar a fazer parte dessa incrível comunidade.
 date: 2023-03-29T19:53:53.816Z
+author: celoreis
+tags:
+  - open-source
 ---
+## Introdução
 
-**Introdução**
+Você já ouviu falar em projetos open source, mas sabe por que é importante contribuir para eles? Neste artigo, vamos discutir os benefícios de contribuir para projetos de código aberto e como você pode começar a fazer parte dessa comunidade incrível.
 
-Você já ouviu falar sobre projetos open source, mas sabe por que é importante contribuir para eles? Neste artigo, discutiremos os benefícios de contribuir para projetos de código aberto e como você pode começar a fazer parte dessa comunidade incrível.
+## O que é open source?
 
-# O que é open source?
-
-O termo "open source" refere-se a um tipo de software cujo código-fonte é disponibilizado publicamente para que qualquer pessoa possa visualizar, modificar e distribuir. Essa abordagem permite que a comunidade global de desenvolvedores colabore em projetos, trazendo melhorias e inovações constantes.
+Open source é um tipo de software cujo código-fonte é disponibilizado publicamente para que qualquer pessoa possa visualizar, modificar e distribuir. Essa abordagem permite que a comunidade global de desenvolvedores colabore em projetos, trazendo melhorias e inovações constantes.
 
 ## Benefícios
+
+Contribuir para projetos open source oferece diversos benefícios, como:
 
 ### Melhorar habilidades técnicas
 
 Contribuir para projetos open source é uma excelente maneira de aprimorar suas habilidades técnicas. Você terá a oportunidade de trabalhar com diversas tecnologias, enfrentar desafios reais e aprender com outros desenvolvedores experientes.
 
-**Aumentar visibilidade profissional**
+### Aumentar visibilidade profissional
 
 Ao colaborar em projetos open source, você estará expondo seu trabalho a uma audiência global. Isso pode aumentar sua visibilidade profissional e até mesmo atrair a atenção de potenciais empregadores.
 
-**Networking**
+### Networking
 
 Participar de projetos open source permite que você construa uma rede de contatos com profissionais de diferentes áreas e níveis de experiência. Essas conexões podem ser valiosas para colaborações futuras, oportunidades de emprego e crescimento pessoal.
 
-**Contribuir para a comunidade**
+### Contribuir para a comunidade
 
 Ao dedicar seu tempo e habilidades para projetos open source, você estará ajudando a comunidade global de desenvolvedores a criar e manter softwares melhores e mais inovadores. Isso pode ser extremamente gratificante e proporcionar uma sensação de realização.
 
-**Ter um portfólio online**
+### Ter um portfólio online
 
 Contribuir para projetos open source permite que você crie um portfólio online sólido que demonstre suas habilidades e conhecimentos técnicos. Esse portfólio pode ser uma vantagem quando você estiver procurando emprego ou buscando avançar em sua carreira.
 
-**Como começar**
+## Como começar
 
-**Encontrar projetos**
+### Encontrar projetos
 
 Há muitos projetos open source disponíveis para contribuição. Algumas plataformas, como o GitHub e o GitLab, facilitam a busca por projetos com base em seus interesses e habilidades.
 
-**Escolher sua área de contribuição**
+### Escolher sua área de contribuição
 
 Existem várias formas de contribuir para projetos open source:
 
-- **Desenvolvimento**: Você pode ajudar a escrever, revisar ou corrigir código.
-- **Documentação**: Criar e manter documentação é essencial para o sucesso de um projeto.
-- **Tradução**: Se você fala mais de um idioma, pode ajudar a traduzir a documentação ou o software em si.
-- **Testes e QA**: Testar o software e identificar problemas é uma parte importante do processo de desenvolvimento.
+* Desenvolvimento: Você pode ajudar a escrever, revisar ou corrigir código.
+* Documentação: Criar e manter documentação é essencial para o sucesso de um projeto.
+* Tradução: Se você fala mais de um idioma, pode ajudar a traduzir a documentação ou o software em si.
+* Testes e QA: Testar o software e identificar problemas é uma parte importante do processo de desenvolvimento.
 
-  **Como contribuir**
+### Como contribuir
 
-- **Fazer fork e clonar repositório**: Primeiro, faça um "fork" do repositório do projeto para a sua conta e clone-o localmente para começar a trabalhar.
-- **Abrir issues e enviar pull requests**: Identifique problemas existentes ou áreas que precisam de melhorias e abra uma "issue" no repositório do projeto. Após fazer as alterações necessárias, envie um "pull request" para que suas contribuições sejam analisadas e possivelmente incorporadas ao projeto.
-- **Participar de discussões e comunicação**: Comunique-se com outros colaboradores e mantenha-se atualizado sobre as últimas notícias e atualizações do projeto. Isso inclui participar de fóruns, listas de discussão e chats.
+* Fazer fork e clonar repositório: Primeiro, faça um "fork" do repositório do projeto para a sua conta e clone-o localmente para começar a trabalhar.
+* Abrir issues e enviar pull requests: Identifique problemas existentes ou áreas que precisam de melhorias e abra uma "issue" no repositório do projeto. Após fazer as alterações necessárias, envie um "pull request" para que suas contribuições sejam analisadas e possivelmente incorporadas ao projeto.
 
-  **Conclusão**
+  * Participar de discussões e comunicação: Comunique-se com outros colaboradores e mantenha-se atualizado sobre as últimas notícias e atualizações do projeto. Isso inclui participar de fóruns, listas de discussão e chats.
+
+  ## Conclusão
 
   Contribuir para projetos open source oferece uma série de benefícios, desde o aprimoramento de habilidades técnicas até a construção de uma rede de contatos profissionais. Além disso, é uma excelente maneira de causar impacto positivo na comunidade global de desenvolvedores. Não há melhor momento para começar a contribuir para projetos open source do que agora.
 
-  **Perguntas frequentes**
+  ## Perguntas frequentes
 
   1. **É necessário ser um desenvolvedor experiente para contribuir em projetos open source?** Não, pessoas com diferentes níveis de experiência podem contribuir para projetos open source. Além disso, há várias áreas de contribuição, como documentação e tradução, que não requerem habilidades avançadas de programação.
   2. **Como posso encontrar projetos open source que se alinhem aos meus interesses e habilidades?** Você pode utilizar plataformas como GitHub e GitLab para pesquisar projetos baseados em tecnologias, linguagens de programação e áreas de interesse específicas.
