feat: Basic about page

--- a/content/experiences/2024-03-alma.md
+++ b/content/experiences/2024-03-alma.md
@@ -21,10 +21,49 @@ en:
   image: /images/uploads/alma-logo.jpeg
 
 pt:
+  jobTitle: Engenheiro Frontend Fundador
+  company: Alma
+  description: >-
+    Como engenheiro frontend fundador na Alma, desempenhei um papel crucial na
+    concepção e desenvolvimento inicial da nossa plataforma. Ao adotar metodologias
+    ágeis e ciclos rápidos de iteração, ajudei a transformar ideias iniciais de produto
+    em uma plataforma funcional e fácil de usar dentro de prazos apertados.
+
+
+    Liderou a integração de frameworks de teste automatizado, incluindo testes unitários
+    e de integração, em nosso processo de desenvolvimento. Essa iniciativa melhorou a estabilidade
+    do código, aumentou a qualidade do produto e reduziu bugs após o lançamento, levando a uma
+    experiência de usuário mais suave e a menores custos de manutenção.
+
+
+    Colaborei de perto com equipes multifuncionais, incluindo desenvolvedores backend,
+    designers e gerentes de produto, para alinhar os esforços técnicos com os objetivos de negócios.
+  skills: react,typescript,jest,next.js,python,cypress,tailwind,html,css
+  location: Palo Alto, Califórnia, Estados Unidos · Remoto
   image: /images/uploads/alma-logo.jpeg
   startDate: 2024-03-25
   endDate: ""
+
 es:
+  jobTitle: Ingeniero Frontend Fundador
+  company: Alma
+  description: >-
+    Como ingeniero frontend fundador en Alma, desempeñé un papel crucial en la
+    concepción y desarrollo inicial de nuestra plataforma. Al adoptar metodologías
+    ágiles y ciclos de iteración rápidos, ayudé a transformar ideas iniciales de producto
+    en una plataforma funcional y fácil de usar dentro de plazos ajustados.
+
+
+    Lideré la integración de marcos de pruebas automatizadas, incluidas pruebas unitarias
+    y de integración, en nuestro proceso de desarrollo. Esta iniciativa mejoró la estabilidad
+    del código, aumentó la calidad del producto y redujo errores posteriores al lanzamiento,
+    lo que resultó en una experiencia de usuario más fluida y menores costos de mantenimiento.
+
+
+    Colaboré estrechamente con equipos multifuncionales, incluidos desarrolladores backend,
+    diseñadores y gerentes de producto, para alinear los esfuerzos técnicos con los objetivos comerciales.
+  skills: react,typescript,jest,next.js,python,cypress,tailwind,html,css
+  location: Palo Alto, California, Estados Unidos · Remoto
   image: /images/uploads/alma-logo.jpeg
   startDate: 2024-03-25
   endDate: ""
