--- a/content/experiences/2019-07-letras.md
+++ b/content/experiences/2019-07-letras.md
@@ -7,20 +7,20 @@ en:
   startDate: 2019-07-01
   endDate: 2021-03-01
   description: >-
-    Spearheaded the adoption of automated testing methodologies, including
-    static analysis, unit testing, and integration tests. Ensured the
-    delivery of high-quality software products that aligned with critical
-    business objectives, reducing bugs and enhancing overall code
-    reliability.
+    • Enhanced performance, optimizing critical rendering paths, page load times
+    and Core Web Vitals, improving SEO ranking and conversion rates.
 
 
-    Worked closely with design teams to transform UI concepts from Figma and Sketch into interactive and engaging user interfaces. Crafted seamless and captivating user experiences that increased user engagement and satisfaction.
+
+    • Led the adoption of automated testing methodologies (static analysis, unit, integration), ensuring the delivery of high-quality software. 
 
 
-    Engineered modern and responsive email templates using HTML and CSS, leading to impactful email marketing campaigns. These campaigns significantly improved customer engagement and conversion rates.
+
+    • Translated UI/UX concepts from Figma and Sketch into interactive and responsive user interfaces using React and GraphQL. 
 
 
-    Proficiently navigated a wide range of technologies to meet various business requirements. Utilized modern frameworks like React and GraphQL, as well as legacy applications using Backbone.js, jQuery, and Vanilla JavaScript, demonstrating versatility and adaptability.
+
+    • Engineered modern HTML/CSS email templates that significantly improved customer engagement and conversion rates.
   skills: CSS,React,jQuery,Apollo,Golang,PHP,Javascript,Typescript,Enzyme,jest
 pt:
   jobTitle: Engenheiro Frontend
@@ -30,16 +30,17 @@ pt:
   startDate: 2019-07-01
   endDate: 2021-03-01
   description: >-
-    Liderou a adoção de metodologias de teste automatizado, incluindo análise estática, testes unitários e de integração. Garantiu a entrega de produtos de software de alta qualidade alinhados com os objetivos comerciais críticos, reduzindo bugs e aumentando a confiabilidade geral do código.
+    • Melhorou o desempenho, otimizando caminhos críticos de renderização, tempos de carregamento de página
+    e Core Web Vitals, melhorando o ranking de SEO e as taxas de conversão.
 
 
-    Trabalhou em estreita colaboração com equipes de design para transformar conceitos de UI do Figma e Sketch em interfaces de usuário interativas e envolventes. Criou experiências de usuário perfeitas e cativantes, que aumentaram o engajamento e a satisfação dos usuários.
+    • Liderou a adoção de metodologias de testes automatizados (análise estática, unitária, integração), garantindo a entrega de software de alta qualidade.
 
 
-    Desenvolveu templates de e-mail modernos e responsivos usando HTML e CSS, resultando em campanhas de e-mail marketing impactantes. Essas campanhas melhoraram significativamente o engajamento dos clientes e as taxas de conversão.
+    • Traduziu conceitos de UI/UX do Figma e Sketch em interfaces de usuário interativas e responsivas usando React e GraphQL.
 
 
-    Navegou com proficiência por uma ampla gama de tecnologias para atender a vários requisitos de negócios. Utilizou frameworks modernos como React e GraphQL, bem como aplicativos legados usando Backbone.js, jQuery e JavaScript puro, demonstrando versatilidade e adaptabilidade.
+    • Projetou modelos de e-mail HTML/CSS modernos que melhoraram significativamente o engajamento e as taxas de conversão do cliente.
   skills: CSS,React,jQuery,Apollo,Golang,PHP,Javascript,Typescript,Enzyme,jest
 es:
   jobTitle: Ingeniero Frontend
@@ -49,15 +50,16 @@ es:
   startDate: 2019-07-01
   endDate: 2021-03-01
   description: >-
-    Lideró la adopción de metodologías de pruebas automatizadas, incluidas análisis estáticos, pruebas unitarias y pruebas de integración. Aseguró la entrega de productos de software de alta calidad alineados con los objetivos comerciales críticos, reduciendo errores y mejorando la confiabilidad general del código.
+    • Rendimiento mejorado, optimizando las rutas de renderizado críticas, los tiempos de carga de la página
+    y Core Web Vitals, mejorando el ranking SEO y las tasas de conversión.
 
 
-    Trabajó estrechamente con los equipos de diseño para transformar conceptos de UI de Figma y Sketch en interfaces de usuario interactivas y atractivas. Creó experiencias de usuario perfectas y cautivadoras que aumentaron la participación y satisfacción de los usuarios.
+    • Lideró la adopción de metodologías de prueba automatizadas (análisis estático, unitario, de integración), asegurando la entrega de software de alta calidad.
 
 
-    Desarrolló plantillas de correo electrónico modernas y responsivas utilizando HTML y CSS, lo que resultó en campañas de marketing por correo electrónico impactantes. Estas campañas mejoraron significativamente la participación de los clientes y las tasas de conversión.
+    • Traduje conceptos de UI/UX de Figma y Sketch en interfaces de usuario interactivas y receptivas usando React y GraphQL.
 
 
-    Navegó con destreza por una amplia gama de tecnologías para cumplir con diversos requisitos comerciales. Utilizó marcos modernos como React y GraphQL, así como aplicaciones heredadas que usan Backbone.js, jQuery y JavaScript puro, demostrando versatilidad y adaptabilidad.
+    • Diseñé plantillas de correo electrónico HTML/CSS modernas que mejoraron significativamente la participación del cliente y las tasas de conversión.
   skills: CSS,React,jQuery,Apollo,Golang,PHP,Javascript,Typescript,Enzyme,jest
 ---
