--- a/content/experiences/2024-03-alma.md
+++ b/content/experiences/2024-03-alma.md
@@ -3,65 +3,50 @@ en:
   startDate: 2024-03-25
   endDate: ""
   description: >-
-    As the founding frontend engineer at Alma, I played a crucial role in
-    the early conception and development of our platform. By embracing agile
-    methodologies and quick iteration cycles, I helped transform initial
-    product ideas into a functional and user-friendly platform within tight
-    deadlines.
+    • Played a pivotal role in the initial conception and rapid development of
+    the core platform using agile methodologies. 
 
 
-    Spearheaded the integration of automated testing frameworks, including unit and integration tests, into our development process. This initiative improved code stability, enhanced product quality, and reduced post-release bugs, leading to a smoother user experience and decreased maintenance costs.
+
+    • Spearheaded the integration of automated unit and integration testing frameworks, significantly improving code stability and reducing post-release bugs. 
 
 
-    Collaborated closely with cross-functional teams, including backend developers, designers, and product managers, to align technical efforts with business goals.
+
+    • Collaborated effectively with backend developers, designers, and product managers to align technical strategy with key business objectives.
   skills: react,typescript,jest,next.js,python,cypress,tailwind,html,css
   location: Palo Alto, California, United States · Remote
   company: Alma
   jobTitle: Founding Frontend Engineer
   image: /images/uploads/alma-logo.jpeg
-
 pt:
   jobTitle: Engenheiro Frontend Fundador
   company: Alma
   description: >-
-    Como engenheiro frontend fundador na Alma, desempenhei um papel crucial na
-    concepção e desenvolvimento inicial da nossa plataforma. Ao adotar metodologias
-    ágeis e ciclos rápidos de iteração, ajudei a transformar ideias iniciais de produto
-    em uma plataforma funcional e fácil de usar dentro de prazos apertados.
+    • Desempenhou um papel fundamental na concepção inicial e no rápido desenvolvimento de
+    a plataforma principal usando metodologias ágeis.
 
 
-    Liderou a integração de frameworks de teste automatizado, incluindo testes unitários
-    e de integração, em nosso processo de desenvolvimento. Essa iniciativa melhorou a estabilidade
-    do código, aumentou a qualidade do produto e reduziu bugs após o lançamento, levando a uma
-    experiência de usuário mais suave e a menores custos de manutenção.
+    • Liderou a integração de estruturas de teste automatizadas de unidade e integração, melhorando significativamente a estabilidade do código e reduzindo bugs pós-lançamento.
 
 
-    Colaborei de perto com equipes multifuncionais, incluindo desenvolvedores backend,
-    designers e gerentes de produto, para alinhar os esforços técnicos com os objetivos de negócios.
+    • Colaborou de forma eficaz com desenvolvedores de back-end, designers e gerentes de produto para alinhar a estratégia técnica com os principais objetivos de negócios.
   skills: react,typescript,jest,next.js,python,cypress,tailwind,html,css
   location: Palo Alto, Califórnia, Estados Unidos · Remoto
   image: /images/uploads/alma-logo.jpeg
   startDate: 2024-03-25
   endDate: ""
-
 es:
   jobTitle: Ingeniero Frontend Fundador
   company: Alma
   description: >-
-    Como ingeniero frontend fundador en Alma, desempeñé un papel crucial en la
-    concepción y desarrollo inicial de nuestra plataforma. Al adoptar metodologías
-    ágiles y ciclos de iteración rápidos, ayudé a transformar ideas iniciales de producto
-    en una plataforma funcional y fácil de usar dentro de plazos ajustados.
+    • Jugó un papel fundamental en la concepción inicial y el rápido desarrollo de
+    la plataforma central utilizando metodologías ágiles.
 
 
-    Lideré la integración de marcos de pruebas automatizadas, incluidas pruebas unitarias
-    y de integración, en nuestro proceso de desarrollo. Esta iniciativa mejoró la estabilidad
-    del código, aumentó la calidad del producto y redujo errores posteriores al lanzamiento,
-    lo que resultó en una experiencia de usuario más fluida y menores costos de mantenimiento.
+    • Encabezó la integración de marcos de prueba de integración y unidades automatizadas, mejorando significativamente la estabilidad del código y reduciendo los errores posteriores a la publicación.
 
 
-    Colaboré estrechamente con equipos multifuncionales, incluidos desarrolladores backend,
-    diseñadores y gerentes de producto, para alinear los esfuerzos técnicos con los objetivos comerciales.
+    • Colaboré eficazmente con desarrolladores de back-end, diseñadores y gerentes de producto para alinear la estrategia técnica con los objetivos comerciales clave.
   skills: react,typescript,jest,next.js,python,cypress,tailwind,html,css
   location: Palo Alto, California, Estados Unidos · Remoto
   image: /images/uploads/alma-logo.jpeg
